# ai-quant-agent

./: .env  .env.example  .gitignore  BATTLE_REPORT_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CRON_STRATEGY.md  CURRENT_STATUS.md  FINAL_REPORT.md  INDEX.md  LICENSE  LIVE_TRADING_DECISION.md  Makefile  OPTIMIZATION_ANALYSIS.md  OPTIMIZATION_REPORT.md  PERFORMANCE.md  PROFIT_ROADMAP.md  PROJECT_SUMMARY.md  QUANT_MONITOR_STRATEGY.md  QUICKSTART.md  README.md  README_NEW.md  README_V3.md  RELIABILITY_COMPLETE.md  RELIABILITY_IMPROVEMENT.md  SETUP_COMPLETE.md  SYSTEM_UPDATED.md  VALIDATION_REPORT.md  auto_recover.sh  auto_run_report.json  backtest_002594_20260303_134516.json  backtest_600519_20260303_134251.json  backtest_600519_20260303_134450.json  backtest_601318_20260303_134517.json  backtest_results.json  cleanup.sh  cleanup_repository.sh  cleanup_round2.sh  (+28 more)
agents/: analysis_agent.py  buffett_analyst.py  fundamentals_analyst.py  growth_analyst.py  risk_agent.py  risk_manager.py  sentiment_analyst.py  strategy_agent.py  technical_analyst.py
backtest/: engine.py
backups/: portfolio_20260304_231538.json  portfolio_20260304_231941.json  portfolio_20260305_153002.json  portfolio_20260306_153002.json
config/: __init__.py  agent_thresholds.yaml  config.example.yaml  data_sources.yaml  settings.py  strategy_v4.yaml  strategy_v5.yaml
core/: __init__.py  base_strategy.py  cache.py  config_loader.py  data_manager.py  indicators.py
data/: advanced_v2_results_20260304_082650.json  aggressive_v3_results_20260304_082843.json  astock_fetcher.py  battle_report.json  comprehensive_backtest_results.json  daily_analysis_results.json  fetch_progress.json  fetcher.py  heartbeat_status.json  improved_strategy_v5_results.json  market_filter_results.json  market_monitor_results.json  monitor_state.json  monitor_summary.json  multi_factor_screening_results.json  optimization_results.json  optimized_v1_results_20260304_082443.json  paper_trading_state.json  param_optimization_results.json  portfolio.json  portfolio_backtest_results.json  real_000858.csv  real_002594.csv  real_600519.csv  real_market_data.json  real_multi_factor_results.json  real_stock_data.json  risk_report.json  sim_BEAR001.csv  sim_BEAR002.csv  sim_BULL001.csv  sim_BULL002.csv  sim_SIDE001.csv  sim_SIDE002.csv  sim_crash_recovery.csv  sim_downtrend.csv  sim_mixed.csv  sim_sideways.csv  sim_uptrend.csv  smart_screening_v2.json  (+7 more)
docs/: ACT_LOCAL_TEST_SUCCESS.md  AGENT_FIX_REPORT.md  API.md  AUTO_TRADING_GUIDE.md  BACKTEST_REPORT_FIXED.md  BACKTEST_STOCK_FIX.md  BUG_FIX_FLAKE8_CI_FAILURE.md  BUG_FIX_LOGURU_DEPENDENCY.md  BUG_FIX_PYYAML_DEPENDENCY.md  CLEANUP_PLAN.md  COMPLETE_BACKTEST_FIX.md  COMPLETE_TEST_REPORT.md  COMPREHENSIVE_BACKTEST_REPORT.md  CONFIG_MANAGEMENT.md  DATA_UPDATER_GUIDE.md  DEEP_inspection_report.md  DEPLOYMENT_SUCCESS.md  DEVELOPMENT_SKILLS_SUMMARY.md  DEeper_inspection_report.md  DYNAMIC_STOCK_SELECTION_REPORT.md  EVOLUTION_PLAN.md  EVOLUTION_SUCCESS.md  FINAL_CONCLUSION.md  FINAL_INSPECTION_SUMMARY.md  FINAL_OPTIMAL_STRATEGY.md  FINANCIAL_DATA_FIX_REPORT.md  FULL_BACKTEST_REPORT.md  FULL_TEST_REPORT.md  GITHUB_ACTIONS_FIX.md  GITHUB_ACTIONS_FIX_COMPLETE.md  GITHUB_ACTIONS_SKILLS.md  GIT_PUSH_SUCCESS.md  GIT_PUSH_TROUBLESHOOTING.md  OPERATION_GUIDE.md  OPTIMIZATION_REPORT.md  OPTIMIZATION_SUCCESS_V4.md  OPTIMIZATION_SUMMARY.md  PLAN_30_PERCENT.md  PROJECT_CLEANUP_REPORT.md  PROJECT_HEALTH_CHECK_REPORT.md  (+19 more)
examples/: adaptive_strategy.py  complete_system.py  complete_validation.py  complete_verification.py  (+49 more)
(+267 files in other folders)
