[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-quant-agent"
version = "3.0.0"
description = "AI quantitative trading system — event-driven multi-agent architecture with real financial data"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "akshare>=1.12.0",
    "tushare>=1.2.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyarrow>=23.0.0",
    "pyyaml>=6.0.0",
    "tenacity>=8.0.0",
    "langchain>=0.3.0",
    "langchain-openai>=1.0.0",
    "langchain-community>=0.3.0",
    "efinance>=0.5.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
quant-agent = "quant_agent.main:run_pipeline"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
norecursedirs = ["tests/archive"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
